--- a/env.example
+++ b/env.example
@@ -22,11 +22,8 @@ QDRANT_API_KEY=
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# OpenAI API Configuration
+# OpenAI API Configuration (embeddings)
 OPENAI_API_KEY=your_openai_api_key_here
-
-# Embedder Configuration (openai or sentence_transformer)
-EMBEDDER_TYPE=openai
 
 # Optional: Telethon session filename (a .session file will be created next to it)
 # Leave default unless you know you need to change it
