--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -57,7 +57,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          TARGET_DIR=/tg-summarizer
+          TARGET_DIR=$HOME/tg-summarizer
           if [ ! -d "$TARGET_DIR/.git" ]; then
             echo "Repository not found at $TARGET_DIR. Clone it and place .env there." >&2
             exit 1
